add tweening library

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="http://ctr.risingcode.com/javascripts/pointer.min.js"></script>
     <script src="http://ctr.risingcode.com/javascripts/three.js"></script>
     <script src="http://ctr.risingcode.com/javascripts/screenfull.min.js"></script>
+    <script src="http://ctr.risingcode.com/javascripts/tween.min.js"></script>
     <script src="http://ctr.risingcode.com/javascripts/engine.js"></script>
     <script src="javascripts/grid.js"></script>
   </head>
