tie camera rotation to ball rotation

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <body>
     <div id="canvas-container">
       <div id="fullscreen-button"></div>
+      <div id="pause-button"></div>
     </div>
   </body>
 </html>
