use different material, and add debug camera toggle

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <div id="canvas-container">
       <div id="fullscreen-button"></div>
       <div id="pause-button"></div>
+      <div id="debug-camera-button"></div>
     </div>
   </body>
 </html>
