pause button icon

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,17 @@
   </head>
   <body>
     <div id="canvas-container">
-      <div id="fullscreen-button"></div>
+      <ul>
+        <li>
+          <div id="fullscreen-button"></div>
+        <li>
+        <li id="pause-button">
+          <a href="#pause">&nbsp;</a>
+        </li>
+      </ul>
+      <!--
       <div id="pause-button"></div>
+      -->
       <div id="debug-camera-button"></div>
     <div id="mods">
       <!--
