somewhat functional ai

--- a/public/index.html
+++ b/public/index.html
@@ -75,18 +75,16 @@
   </head>
   <body>
     <div id="canvas-container">
-      <ul>
+      <ul id="buttons-container">
         <li>
           <div id="fullscreen-button"></div>
         <li>
         <li id="pause-button">
-          <a href="#pause">&nbsp;</a>
+          <a href="#pause"></a>
+        </li>
+        <li id="debug-camera-button">
         </li>
       </ul>
-      <!--
-      <div id="pause-button"></div>
-      -->
-      <div id="debug-camera-button"></div>
     <div id="mods">
       <!--
       <a href="phuture_sounds.mod">phuture_sounds</a>
