--- a/public/index.html
+++ b/public/index.html
@@ -76,17 +76,6 @@
   </head>
   <body>
     <div id="canvas-container">
-      <ul id="buttons-container">
-        <li id="fullscreen-button">
-          <a class="genericon genericon-maximize" href="maximize"></a>
-        </li>
-        <li id="pause-button">
-          <a class="genericon genericon-video" href="#pause"></a>
-        </li>
-        <li id="debug-camera-button">
-          <a class="genericon genericon-image" href="#camera"></a>
-        </li>
-      </ul>
       <ul id="mods-container">
         <li>
           <a href="cyberm00n.mod">cyberm00n</a>
@@ -99,6 +88,17 @@
         </li>
         <li>
           <a href="speed_chase.mod">speed_chase</a>
+        </li>
+      </ul>
+      <ul id="buttons-container">
+        <li id="fullscreen-button">
+          <a class="genericon genericon-maximize" href="#maximize"></a>
+        </li>
+        <li id="pause-button">
+          <a class="genericon genericon-video" href="#pause"></a>
+        </li>
+        <li id="debug-camera-button">
+          <a class="genericon genericon-image" href="#camera"></a>
         </li>
       </ul>
       <script type="text/javascript">
