not sure how this was suppose to work

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="genericons/genericons.css">
-    <script src="http://modgraphz.risingcode.com/modfile.js"></script>
-    <script src="http://modgraphz.risingcode.com/modplayer.js"></script>
-    <script src="http://modgraphz.risingcode.com/sink.js"></script>
-    <script src="http://ctr.risingcode.com/javascripts/pointer.min.js"></script>
-    <script src="http://ctr.risingcode.com/javascripts/three.js"></script>
-    <script src="http://ctr.risingcode.com/javascripts/screenfull.min.js"></script>
-    <script src="http://ctr.risingcode.com/javascripts/tween.min.js"></script>
+    <script src="https://modgraphz.bardin.haus/modfile.js"></script>
+    <script src="https://modgraphz.bardin.haus/modplayer.js"></script>
+    <script src="https://modgraphz.bardin.haus/sink.js"></script>
+    <script src="https://ctr.bardin.haus/javascripts/pointer.min.js"></script>
+    <script src="https://ctr.bardin.haus/javascripts/three.js"></script>
+    <script src="https://ctr.bardin.haus/javascripts/screenfull.min.js"></script>
+    <script src="https://ctr.bardin.haus/javascripts/tween.min.js"></script>
     <script type="text/javascript">
 
       var modPlayerSet = false;
@@ -58,7 +58,6 @@
             var mx = t.length;
             var scc = String.fromCharCode;
             for (z = 0; z < mx; z++) {
-              //console.log("wtf");
               ff[z] = scc(t.charCodeAt(z) & 255);
             }
             var binString = ff.join("");
@@ -71,7 +70,7 @@
         fetch.send();
       }
     </script>
-    <script src="http://ctr.risingcode.com/javascripts/engine.js"></script>
+    <script src="https://ctr.bardin.haus/javascripts/engine.js"></script>
     <script src="javascripts/grid.js"></script>
   </head>
   <body>
